# familyserver

./: .gitignore  Cargo.toml  Makefile.toml  Shuttle.toml  tags
api/lib/: Cargo.toml
api/lib/src/: configuration.rs  health.rs  lib.rs  state.rs  utils.rs
api/lib/src/interface/: user.rs
api/shuttle/: Cargo.toml  schema.sql
api/shuttle/migrations/: 20231104234854_schema.sql
api/shuttle/src/: main.rs
api/shuttle/tests/api/: health.rs  helpers.rs  main.rs  user.rs
front/: Cargo.toml  Dioxus.toml  tailwind.config.js
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: button.rs  footer.rs  mod.rs  user_card.rs
shared/: Cargo.toml
shared/src/models/: user.rs
