[workspace]
members = [
    "api/lib",
    "api/shuttle",
    "shared"
]
resolver = "1"

[workspace.dependencies]
api-lib = { path = "./api/lib" }
axum = "0.6.20"
reqwest = { version = "0.11.20", features = ["cookie_store", "cookies", "tokio-rustls"] }
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-secrets = "0.25.0"
shuttle-service = { version = "0.25.0", features = ["tokio"] }
shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"] }
shuttle-static-folder = "0.25.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.28.2", features = ["fs", "tracing"] }
tracing = "0.1.37"
