[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = { path = "../lib" }
axum = "0.6.18"
shuttle-axum = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
tokio = "1.28.2"
