[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-runtime = { workspace = true }
shuttle-shared-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
