[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
api-lib = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
shared = { path = "../../shared", features = ["backend"] }
shuttle-axum = { workspace = true }
shuttle-runtime = { workspace = true }
shuttle-secrets = { workspace = true }
shuttle-shared-db = { workspace = true }
shuttle-static-folder = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
